[project]
name = "qwen3-vl"
version = "0.1.0"
description = "Qwen3-VL Experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "numpy<=2.2",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "qwen-vl-utils>=0.0.14",
    "transformers>=4.57.3",
]

[tool.setuptools]
packages = ["scripts"]
